# Helios

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  LICENSE  Makefile  PROJECT_PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  requirements-dev.txt
docs/: 00-START-HERE.md  DEPLOY.md  DOCUMENTATION-PLAN.md  MLOPS.md  PROJECT_WRITEUP.md  README.md  sample-incident-report.md
k8s/: configmap.yaml  namespace.yaml
models/: model_config.json  training_data.csv  training_metrics.json
scripts/: README.md  continuous_traffic.py  demo.py  diagnose_reporting.py  drift_check.py  dry_run.py  evaluate.py  evaluate_baseline.py  evaluate_model.py  evaluate_production.py  generate_chaos_traffic.py  generate_demo_data.py  generate_events.go  generate_sample_report.py  live_anomaly_generator.py  load_test.py  populate_demo_data.sql  setup.sh  simulate_indian_scenarios.py  train_model.py  (+1 more)
services/detection/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
services/detection/app/: __init__.py  main.py
services/detection/app/api/: models.py  routes.py
services/detection/app/consumers/: __init__.py  detection_consumer.py  metrics.py
services/detection/app/core/: __init__.py  config.py  database.py  logging.py
services/detection/app/ml/: __init__.py  anomaly_detector.py  explainability.py  feature_engineering.py  realistic_data_generator.py  training.py
services/detection/models/: anomaly_detector.py
services/detection/tests/: __init__.py  test_anomaly_detector.py  test_feature_engineering.py
(+130 files in other folders)
