[tool.poetry]
name = "helios-detection"
version = "1.0.0"
description = "Helios anomaly detection service using ML"
authors = ["Nilansh Jain <nilansh.jain@somaiya.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
kafka-python = "^2.0.2"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
joblib = "^1.3.2"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
